Overflow bug

--- a/assets/css/2-basics/_body-element.sass
+++ b/assets/css/2-basics/_body-element.sass
@@ -14,10 +14,3 @@ body
 
   .wrapper
     overflow-x: hidden
-
-
-@media (max-width: 800px)
-  body
-    width: 100%
-    height: 100%
-    overflow-x: hidden
