--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -213,11 +213,6 @@ body {
   body .wrapper {
     overflow-x: hidden; }
 
-@media (max-width: 800px) {
-  body {
-    width: 100%;
-    height: 100%;
-    overflow-x: hidden; } }
 ::selection {
   background: #FFF498; }
 
